<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group>
        <item
            android:id="@+id/nav_Upcoming"
            android:icon="@drawable/ic_notifications"
            android:title="@string/Upcoming" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/History" />
    </group>
<item android:title="TODO">
        <menu>
            <item
                android:id="@+id/nav_sync"
                android:icon="@drawable/ic_sync"
                android:title="@string/sync" />

            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_map"
                android:title="@string/map" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
</item>
</menu>