<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:contentPaddingBottom="10dp"
    app:contentPaddingLeft="10dp"
    app:contentPaddingRight="10dp"
    app:contentPaddingTop="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/trip_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="4dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tripTypeUpcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/tripType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.272"
            app:layout_constraintStart_toEndOf="@+id/trip_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.355" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/From"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />


        <TextView
            android:id="@+id/startPointField"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:drawablePadding="10dp"
            android:paddingRight="10dp"
            android:text="@string/StartPoint"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/to"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/startPointField" />

        <TextView
            android:id="@+id/endPointField"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/endPoint"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/startPointField" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/at"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/endPointField" />

        <TextView
            android:id="@+id/dateField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/endPointField" />

        <TextView
            android:id="@+id/timeField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/dateField"
            app:layout_constraintTop_toBottomOf="@+id/dateField" />


        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_bg"
            android:radius="80dp"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/timeField" />

        <Button
            android:id="@+id/startBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@drawable/btn_bg"
            android:radius="80dp"
            android:text="@string/start"
            android:textColor="@color/colorWhite"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancelBtn"
            app:layout_constraintStart_toEndOf="@+id/cancelBtn" />

        <ImageView
            android:id="@+id/btn_deleteNote2"
            android:layout_width="39dp"
            android:layout_height="53dp"
            android:layout_marginTop="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTripBtn"
            app:srcCompat="@drawable/ic_delete" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="58dp"
            android:layout_height="88dp"
            android:layout_marginTop="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/road" />

        <ImageView
            android:id="@+id/editTripBtn"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_addNotes" />

        <ImageView
            android:id="@+id/btn_addNotes"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_notes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>