<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:contentPaddingBottom="10dp"
    app:contentPaddingLeft="10dp"
    app:contentPaddingRight="10dp"
    app:contentPaddingTop="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tripName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="4dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tripType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/tripType"
            app:layout_constraintStart_toEndOf="@+id/tripName"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tripStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/status"
            app:layout_constraintBottom_toTopOf="@+id/mapImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tripType"
            app:layout_constraintTop_toTopOf="@+id/tripType"
            app:layout_constraintVertical_bias="1.0" />


        <ImageView
            android:id="@+id/mapImage"
            android:layout_width="335dp"
            android:layout_height="265dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tripName"
            app:srcCompat="@drawable/placeholder" />


        <!--   <TextView
            android:id="@+id/startPoint"
            android:layout_width="116dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:drawablePadding="10dp"
            android:text="@string/StartPoint"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapImage" />

        <TextView
            android:id="@+id/endPoint"
            android:layout_width="117dp"
            android:layout_height="100dp"
            android:layout_marginStart="24dp"
            android:text="@string/endPoint"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/startPoint"
            app:layout_constraintStart_toEndOf="@+id/startPoint" />
-->

        <TextView
            android:id="@+id/text_dis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:drawablePadding="10dp"
            android:text="@string/distance"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapImage" />


        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/dis"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_dis"
            app:layout_constraintStart_toEndOf="@+id/text_dis" />

        <TextView
            android:id="@+id/text_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="10dp"
            android:text="@string/duration"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_dis" />


        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/dur"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_duration"
            app:layout_constraintStart_toEndOf="@+id/text_duration" />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="39dp"
            android:layout_height="53dp"
            app:layout_constraintBottom_toBottomOf="@+id/duration"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_delete"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/reTrip"
            android:layout_width="39dp"
            android:layout_height="53dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/duration"
            app:layout_constraintEnd_toStartOf="@+id/delete"
            app:srcCompat="@drawable/ic_baseline_redo_24"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tripStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>