<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="411dp"
        android:layout_height="18dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <Button
        android:id="@+id/text_no_logout"
        android:layout_width="104dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_bg"
        android:radius="80dp"
        android:text="@string/no"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="@+id/alertViewMsg"
        app:layout_constraintTop_toBottomOf="@+id/alertViewMsg" />

    <Button
        android:id="@+id/text_yes_logout"
        android:layout_width="104dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/btn_bg"

        android:radius="80dp"
        android:text="@string/yes"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toEndOf="@+id/text_no_logout"
        app:layout_constraintTop_toTopOf="@+id/text_no_logout" />


    <TextView
        android:id="@+id/alertViewMsg"
        android:layout_width="284dp"
        android:layout_height="59dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/want_logout"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/text_no_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="31dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_no_logout">

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
