<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:contentPaddingTop="10dp"
    app:contentPaddingBottom="10dp"
    app:contentPaddingLeft="10dp"
    app:contentPaddingRight="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/snooze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Snooze"

          />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.9"
                android:orientation="vertical"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/rounded_edittext"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_trip_name"
                        android:drawablePadding="10dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="20dp"
                        android:paddingRight="10dp"
                        android:text="@string/name"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow3"

                        />

                    <TextView
                        android:id="@+id/trip_name"
                        android:layout_width="166dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:paddingBottom="10dp"

                        android:text="@string/name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/rounded_edittext"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_pin"
                        android:drawablePadding="10dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="20dp"
                        android:paddingRight="5dp"
                        android:text="@string/From"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow3"

                        />

                    <TextView
                        android:id="@+id/startPointField"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="30dp"
                        android:text="@string/StartPoint" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"

                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_edittext"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_pin"
                        android:drawablePadding="10dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="20dp"
                        android:paddingRight="10dp"
                        android:text="@string/to"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow3"

                        />

                    <TextView
                        android:id="@+id/endPointField"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="30dp"
                        android:text="@string/endPoint" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/startBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:backgroundTint="@color/teal_200"
                android:text="@string/start" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
